--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
     --parrafos: 'Noto Sans', sans-serif;
     /* colores */
     --encabezado: #F29422;
-    --piepagina: #292F40;
+    --piepagina: #4b2800;
     --enlace: #fff;
-    --enlaceSobre: #F29422;
+    --enlaceSobre: #fcc581;
     --fondo: #F2F2F2;
   
     
@@ -49,4 +49,115 @@ header nav a{
     color: var(--enlace);
     margin-left: 8px;
 
+}
+
+header nav a:hover{
+    color: var(--enlaceSobre);
+}
+
+/* sección home, con un identificador en css (#)  */
+#home{
+    text-align: center;
+    padding: 250px 0 250px;
+}
+
+#home p{
+    margin-top: 40px;
+    color: #492c00;
+    font-size: 25px;
+    font-weight: bold;
+
+}
+
+#home h1{
+    margin-bottom: 45px;
+    font-weight: 700;
+    font-size: 3.2rem;
+    color: #c58d24;
+}
+
+.container{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+section {
+    padding: 80px 0;
+}
+
+section h2{
+    text-align: center;
+    margin-bottom: 50px;
+    font-size: 2.5rem;
+
+}
+
+/* seccion novedades */
+#novedades .box{
+    display: inline-block;
+    width: 33%;
+    padding: 8px;
+}
+
+#novedades .box p{
+    text-align: justify;
+}
+
+#novedades .box img{
+    padding-left: 30%;
+    padding-bottom: 10px;
+}
+
+#novedades .box h3{
+    text-align: center;
+}
+
+/* sección categoria */
+#categoria .box{
+    width: 33%;
+    display: inline-block;
+    padding: 8px;
+
+}
+
+#categoria .box img{
+    width: 100%;
+}
+
+#categoria .box p{
+    text-align: justify;
+}
+
+#categoria .box h3{
+    text-align: center;
+}
+
+/* contacto */
+#contacto{
+    background-image: url('/images/map-image.png');
+    background-color:#fcc581 ;
+    background-size: cover;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#contacto h2{
+    color:#c4700a ;
+}
+#contacto input,
+select,textarea{
+    width: 600px;
+    padding: 10px 5px;
+    font-size: 18px;
+} 
+
+/* footer o pie de pag */
+footer{
+    width: 100%;
+    text-align: center;
+    color: #ffffff;
+    padding: 20px 0;
+    background-color: var(--piepagina);
 }
